# sca-cli

./: .gitignore  README.md  pyproject.toml
doc/: sca-cli_IMPLEMENTATION.md  sca-cli_OPS_GUIDE.md  sca-cli_SPEC_v2.md  sca-cli_USER_GUIDE.md
src/sca_cli/: __init__.py  main.py
src/sca_cli/cli/: db.py  doctor.py  init.py  intel.py  rules.py  scan.py  sync.py
src/sca_cli/core/: config.py  downloader.py  extractor.py  paths.py  project_detect.py  subprocess_runner.py  workspace.py
src/sca_cli/db/: migrations.py  repositories.py  session.py
src/sca_cli/normalize/: findings.py
src/sca_cli/rules/: __init__.py  engine.py  loader.py  matcher.py
src/sca_cli/scanners/: __init__.py  base.py  code_deps.py  grype.py  high_risk_api.py  install_script.py  license.py  npm_audit.py  pip_audit.py  skill_rules.py  syft.py
src/sca_cli/utils/: hashing.py  json.py  logging.py  time.py
tests/: test_core.py  test_input.py  test_normalize.py  test_project_detect.py  test_reports.py  test_rules_engine.py  test_rules_reports.py  test_sync.py
tests/fixtures/js_postinstall_risk/: package.json
tests/fixtures/js_safe_skill/: index.js  package.json
tests/fixtures/js_vulnerable_skill/: index.js  package.json
tests/fixtures/mcp_command_tool/: mcp.json  server.py
tests/fixtures/mcp_prompt_injection/: mcp.json  server.py
tests/fixtures/mixed_python_js_skill/: index.js  package.json  server.py
tests/fixtures/python_malicious_setup/: setup.cfg  setup.py
tests/fixtures/python_safe_skill/: skill.json
tests/fixtures/python_vulnerable_skill/: requirements.txt  server.py  (+1 more)
(+7 files in other folders)
