[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sca-cli"
version = "0.1.0"
description = "Agent Skill supply-chain security scanner CLI"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "SQLAlchemy>=2.0",
  "pydantic>=2",
  "httpx>=0.27",
  "Jinja2>=3.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
fast-json = [
  "orjson>=3.10",
]

[project.scripts]
sca-cli = "sca_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sca_cli = [
  "reports/templates/*.j2",
  "reports/assets/*.css",
  "rules_builtin/**/*.yml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
